@@ -1,3 +1,10 @@
+2002-09-19  Andrew Cagney  <cagney@redhat.com>
+
+	* i386-tdep.c (i386_sse_reggroup, i386_mmx_reggroup): Replace
+	i368_sse_reggroup and i368_mmx_reggroup.
+	(i386_register_reggroup_p, i386_init_reggroups): Update.
+	(i386_add_reggroups): Update.
+
 2002-09-13  Andrew Cagney  <cagney@redhat.com>
 
 	* i386-tdep.c (i386_add_reggroups): Add save_reggroup and
